Put Days in Correct Spot in Calendar
If a day of the week starts on a Monday, the first number will be in the second position and there will be an empty space for the Sunday spot. The first row does not line up anymore but the rest of the number do.

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,8 @@
     margin: 25px 21px 25px 21px;
     display: inline;
 }
+
+#emptyDay {
+    margin: 25px 25px 25px 25px;
+    display: inline;
+}
